--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -4,7 +4,7 @@
     <hr>
     <div class="row">
       <div *ngFor="let event of events" class="col-md-5">
-        <app-event-tumbnail [event]="event"></app-event-tumbnail>
+        <app-event-tumbnail (click)="handleThumbnailClick(event.name)" [event]="event"></app-event-tumbnail>
       </div>
     </div>
   
